--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <script defer src="javascript.js"></script>
     </head>
     <body>
+        <button id="grid-reset">Reset Grid</button>
+        <button id="grid-settings">Grid Settings</button>
+        <div id="grid-container"></div>
     </body>
 </html>
